[package]
name = "rust-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
actix-web = "4.9.0"
actix-cors = "0.7.0"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
argon2 = "0.5.3"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }